# ingestion-service

./: .env.example  ARCHITECTURE.md  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  prometheus.yml  pyproject.toml  rules.yml  topics.yml
alembic/: env.py
alembic/versions/: 198a886ed4a8_create_documents_table.py  300bf1a46e3c_create_chat_sessions_and_chat_messages_.py  7e008f52ea43_create_topics_tables.py  8f9d2af909b1_create_document_events_table.py  adcc18df2991_create_chat_sessions_and_chat_messages_.py  ebbae282a8cc_create_workspaces_table.py  f2b9e2e48467_create_chat_message_sources_table.py  f2b9e2e48467_create_chat_sources_tables.py  f703949fefef_create_api_keys_table.py
api/: dependencies.py  documents.py  events.py  exc.py  exc_handlers.py  main.py
api/v1/: __init__.py  chat.py  dependencies.py  documents.py  exc.py  utils.py  workspaces.py
app/: defaults.py  main.py  status.py  types.py
app/adapters/: langchain_text_splitter.py  local_file_storage.py  local_llm_client.py  local_vector_storage.py  minio_file_storage.py  ollama_llm_client.py  openai_llm_client.py  qdrant_vector_storage.py  sqlalchemy_repository.py  transformers_embedding_model.py  transformers_reranker.py
celery_exporter/: collectors.py  events.py  exporter.py  main.py  metrics.py  state.py
config/: __init__.py  adapters.py  api.py  database.py  default.py  document.py  embedding.py  log.py  logging.py  settings.py  splitter.py  storage.py  stub.py
docker/: api.dockerfile  backend.dockerfile  celery.dockerfile  celery_beat.dockerfile  celery_exporter.dockerfile  celery_worker.dockerfile  kafka_consumer.dockerfile  ui.dockerfile
domain/: process.py  schemas.py  utils.py
exceptions/: base.py  http.py  storage.py
infrastructure/: storage_minio.py  vectorstore_qdrant.py
schemas/: __init__.py  base.py  mixins.py
scripts/: run.sh
services/: __init__.py  exc.py  exceptions.py  interfaces.py
stubs/: __init__.py  llm_stub.py  metadata_repository.py  raw_storage.py  vector_store.py
tasks/: main.py  metrics.py  preserializers.py
tests/: conftest.py  dummies.py  generators.py  mappers.py  mock_utils.py  test_api.py  test_process.py  test_service.py  test_stubs.py  test_utils.py
ui/: chat_page.py  docs_page.py  main.py  workspaces_page.py
utils/: datetime.py  file.py  singleton.py
(+258 files in other folders)
